--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
 # Binaries for programs and plugins
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
+vim-clone
 
 # Test binary, built with `go test -c`
 *.test
@@ -19,7 +17,9 @@
 
 # Go workspace file
 go.work
-go.work.sum
 
-# env file
-.env
+# IDE specific files
+.idea
+.vscode
+*.swp
+.DS_Store
